syntax = "proto3";

option csharp_namespace = "AuthenticationGrpc";

package Authentication;

service AuthenticationGrpcService {
	rpc Login(LoginGrpcRequestDTO) returns (LoginGrpcReplyDTO);
	rpc RefreshToken(RefreshTokenGrpcRequestDTO) returns (RefreshTokenGrpcReplyDTO);
	rpc Logout(RefreshTokenGrpcRequestDTO) returns (LogoutGrpcReplyDTO);
}

message LoginGrpcRequestDTO {
	string Email = 1;
	string Password = 2;
}

message LoginGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	LoginGrpcReplyDataDTO Data = 3;
}

message LoginGrpcReplyDataDTO {
	string AccessToken = 1;
	string RefreshToken = 2;
}

message RefreshTokenGrpcRequestDTO {
	string RefreshToken = 1;
}

message RefreshTokenGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	RefreshTokenGrpcReplyDataDTO Data = 3;
}

message RefreshTokenGrpcReplyDataDTO {
	string AccessToken = 1;
}

message LogoutGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
}