syntax = "proto3";

option csharp_namespace = "CinemaGrpc";

package Cinema;

service CinemaGrpcService {
	rpc GetAllCinemas(GetAllCinemasGrpcRequestDTO) returns (GetAllCinemasGrpcReplyDTO);
	rpc CreateCinema(CreateCinemaGrpcRequestDTO) returns (CreateCinemaGrpcReplyDTO);
	rpc UpdateCinema(UpdateCinemaGrpcRequestDTO) returns (UpdateCinemaGrpcReplyDTO);
	rpc DeleteCinema(DeleteCinemaGrpcRequestDTO) returns (DeleteCinemaGrpcReplyDTO);

	rpc GetAllRooms(GetAllRoomsGrpcRequestDTO) returns (GetAllRoomsGrpcReplyDTO);
	rpc CreateRoom(CreateRoomGrpcRequestDTO) returns (CreateRoomGrpcReplyDTO);
	rpc UpdateRoom(UpdateRoomGrpcRequestDTO) returns (UpdateRoomGrpcReplyDTO);
	rpc DeleteRoom(DeleteRoomGrpcRequestDTO) returns (DeleteRoomGrpcReplyDTO);

	rpc GetAllRoomTypes(GetAllRoomTypesGrpcRequestDTO) returns (GetAllRoomTypesGrpcReplyDTO);
	rpc CreateRoomType(CreateRoomTypeGrpcRequestDTO) returns (CreateRoomTypeGrpcReplyDTO);
	rpc UpdateRoomType(UpdateRoomTypeGrpcRequestDTO) returns (UpdateRoomTypeGrpcReplyDTO);
	rpc DeleteRoomType(DeleteRoomTypeGrpcRequestDTO) returns (DeleteRoomTypeGrpcReplyDTO);

	rpc GetAllSeatTypes(GetAllSeatTypesGrpcRequestDTO) returns (GetAllSeatTypesGrpcReplyDTO);
	rpc CreateSeatType(CreateSeatTypeGrpcRequestDTO) returns (CreateSeatTypeGrpcReplyDTO);
	rpc UpdateSeatType(UpdateSeatTypeGrpcRequestDTO) returns (UpdateSeatTypeGrpcReplyDTO);
	rpc DeleteSeatType(DeleteSeatTypeGrpcRequestDTO) returns (DeleteSeatTypeGrpcReplyDTO);

}

message GetAllCinemasGrpcRequestDTO {
	string Id = 1;
	string Name = 2;
	string City = 3;
	string Status = 4;
}

message GetAllCinemasGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	repeated GetAllCinemasGrpcReplyDataDTO Data = 4;
}

message GetAllCinemasGrpcReplyDataDTO {
	string Id = 1;
	string Name = 2;
	string Address = 3;
	string City = 4;
	string Email = 5;
	string PhoneNumber = 6;
	string OpenTime = 7;
	string CloseTime = 8;
	int32 TotalRoom = 9;
	string Status = 10;
}

message CreateCinemaGrpcRequestDTO {
	string Name = 1;
	string Address = 2;
	string City = 3;
	string PhoneNumber = 4;
	string Email = 5;
	string OpenTime = 6;
	string CloseTime = 7;
	string Status = 8;
	string CreatedBy = 9;
}

message CreateCinemaGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	CreateCinemaGrpcReplyDataDTO Data = 4;
}

message CreateCinemaGrpcReplyDataDTO {
	string Id = 1;
	string Name = 2;
	string Address = 3;
	string City = 4;
	string PhoneNumber = 5;
	string Email = 6;
	string OpenTime = 7;
	string CloseTime = 8;
	string Status = 9;
	string CreatedBy = 10;
}


message UpdateCinemaGrpcRequestDTO {
	string Id = 1;
	string Name = 2;
	string Address = 3;
	string City = 4;
	string PhoneNumber = 5;
	string Email = 6;
	string OpenTime = 7;
	string CloseTime = 8;
	string Status = 9;
}

message UpdateCinemaGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	UpdateCinemaGrpcReplyDataDTO Data = 4;
}

message UpdateCinemaGrpcReplyDataDTO {
	string Name = 1;
	string Address = 2;
	string City = 3;
	string PhoneNumber = 4;
	string Email = 5;
	string OpenTime = 6;
	string CloseTime = 7;
	string Status = 8;
}

message DeleteCinemaGrpcRequestDTO {
	string Id = 1;
}

message DeleteCinemaGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
}

message CreateRoomTypeGrpcRequestDTO {
	string Type = 1; 
    string BasePrice = 2;
    string CreatedBy = 3;
}

message CreateRoomTypeGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	CreateRoomTypeGrpcReplyDataDTO Data = 4;
}

message CreateRoomTypeGrpcReplyDataDTO {
	string Id = 1;
	string Type = 2; 
    string BasePrice = 3;
	string CreatedBy = 4;
}


message GetAllRoomTypesGrpcRequestDTO {
	string Id = 1;
	string Type = 2;
	string BasePrice = 3;
}

message GetAllRoomTypesGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	repeated GetAllRoomTypesGrpcReplyDataDTO Data = 4;
}

message GetAllRoomTypesGrpcReplyDataDTO {
	string Id = 1;
	string Type = 2;
	string BasePrice = 3;
}

message UpdateRoomTypeGrpcRequestDTO {
	string Id = 1;
	string Type = 2;
	string BasePrice = 3;
}

message UpdateRoomTypeGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	UpdateRoomTypeGrpcReplyDataDTO Data = 4;
}

message UpdateRoomTypeGrpcReplyDataDTO {
	string Type = 1;
	string BasePrice = 2;
}

message DeleteRoomTypeGrpcRequestDTO {
	string Id = 1;
}

message DeleteRoomTypeGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
}

message GetAllSeatTypesGrpcRequestDTO {
	string Id = 1;
	string Type = 2;
	string ExtraPrice = 3;
}

message GetAllSeatTypesGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	repeated GetAllSeatTypesGrpcReplyDataDTO Data = 4;
}

message GetAllSeatTypesGrpcReplyDataDTO {
	string Id = 1;
	string Type = 2;
	string ExtraPrice = 3;
}

message CreateSeatTypeGrpcRequestDTO {
	string Type = 1;
	string ExtraPrice = 2;
	string CreatedBy = 3;
}

message CreateSeatTypeGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	CreateSeatTypeGrpcReplyDataDTO Data = 4;
}

message CreateSeatTypeGrpcReplyDataDTO {
	string Id = 1;
	string Type = 2;
	string ExtraPrice = 3;
	string CreatedBy = 4;
}

message UpdateSeatTypeGrpcRequestDTO {
	string Id = 1;
	string Type = 2;
	string ExtraPrice = 3;
}

message UpdateSeatTypeGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	UpdateSeatTypeGrpcReplyDataDTO Data = 4;
}

message UpdateSeatTypeGrpcReplyDataDTO {
	string Type = 1;
	string ExtraPrice = 2;
}

message DeleteSeatTypeGrpcRequestDTO {
	string Id = 1;
}

message DeleteSeatTypeGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
}

message CreateRoomGrpcRequestDTO {
	int32 RoomNumber = 1;
    string Status = 2; 
    int32 TotalColumn = 3;
	int32 TotalRow = 4;
    string RoomTypeId = 5;
    string CinemaId = 6;
	string CreatedBy = 7;
}

message CreateRoomGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	CreateRoomGrpcReplyDataDTO Data = 4;
}

message CreateRoomGrpcReplyDataDTO {
	string Id = 1;
    int32 RoomNumber = 2;
    string Status = 3; 
    int32 TotalColumn = 4;
	int32 TotalRow = 5;
    string RoomType = 6;
    string Cinema = 7;
	string CreatedBy = 8;
	repeated CreateSeatGrpcReplyDataDTO Seats = 9;
}

message CreateSeatGrpcReplyDataDTO {
	string Id = 1;
	string Label = 2;
    int32 ColumnIndex = 3;
    int32 DisplayNumber = 4;
    string SeatCode = 5;
    bool isActive = 6;
    string Status = 7;
    string SeatType = 8;
}

message GetAllRoomsGrpcRequestDTO {
	string CinemaId = 1;
	string Id = 2;
	int32 RoomNumber = 3;
    string Status = 4; 
    string Type = 5;
}

message GetAllRoomsGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	repeated GetAllRoomsGrpcReplyDataDTO Data = 4;
}

message GetAllRoomsGrpcReplyDataDTO {
	string Id = 1;
    int32 RoomNumber = 2;
    string Status = 3;
    int32 TotalColumn = 4;
    int32 TotalRow = 5;
    string RoomType = 6;
    string CreatedBy = 7;
}

message UpdateRoomGrpcRequestDTO {
	string Id = 1;
	int32 RoomNumber = 2;
	string Status = 3;
	int32 TotalColumn = 4;
	int32 TotalRow = 5;
	string RoomTypeId = 6;
	string CinemaId = 7;
}

message UpdateRoomGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	UpdateRoomGrpcReplyDataDTO Data = 4;
}

message UpdateRoomGrpcReplyDataDTO {
	int32 RoomNumber = 1;
	string Status = 2;
	int32 TotalColumn = 3;
	int32 TotalRow = 4;
	string Type = 5;
}

message DeleteRoomGrpcRequestDTO {
	string Id = 1;
}

message DeleteRoomGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
}